--- a/src/app/application/deployment-verification/deployment-verification.component.html
+++ b/src/app/application/deployment-verification/deployment-verification.component.html
@@ -122,10 +122,6 @@
       <!-- /.table-footer px-3 py-2 -->
     </div>
   </div>
-    <!-- /.leftBox w-250 -->
-
-
-    <!-- Modal -->
     <div class="modal bd-example-modal-lg fade" id="manualTrigger" tabindex="-1" role="dialog" aria-labelledby="manualTriggerLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
@@ -248,9 +244,9 @@
       <!-- /.page_title d-flex -->
 
       <div class="row no-gutters">
-        <mat-drawer-container class="col-md-12">
-          <mat-drawer #sideNav mode="side" opened="true" [position]="nav_position" class="col-md-4">
-            
+        <div class="col-md-12 col-lg-12 col-xs-12 col-sm-12">
+          <mat-drawer-container class="example-container" autosize>
+            <mat-drawer #sideNav class="example-sidenav" [position]="'end'" mode="side">
               <div class="rightBox m-0 position-sticky">
                 <div class="rightBox_header bg-white d-flex align-items-center">
                   <div class="btns_icon d-flex ml-auto">
@@ -258,38 +254,24 @@
                     <button class="btn p-0 ml-2" data-toggle="tooltip" data-placement="top" title="Add"><img src="../../../assets/images/plus_icon.png" alt="plus" /></button>
                     <button class="btn p-0 ml-2" data-toggle="tooltip" data-placement="top" title="Edit"><img src="../../../assets/images/edit_icon.png" alt="edit" /></button>
                   </div>
-                  <!-- /.btns_icon -->
                 </div>
-                <!-- /.rightBox_header -->
                 <div class="rightBox_body pt-0">
                   <div class="chart_ratio mb-3 text-center d-flex">
-                    <!--  -->
                     <div class="chart_value flex-grow-1"  [ngClass]= "{'cv_high':serviceNameInfo['status'] === 'Success','cv_low':serviceNameInfo['status'] === 'Fail','cv_medium':serviceNameInfo['status'] === 'Review'}">
                       <div class="cv_heighlight"  [ngClass]= "{'text-danger':serviceNameInfo['status'] === 'Fail','text-success':serviceNameInfo['status'] === 'Success','text-warning':serviceNameInfo['status'] === 'Review','text-muted':serviceNameInfo['status'] === 'InProgress'}">{{serviceNameInfo['status']}}</div>                      
                       <div class="cv_name">Status  
                       </div>
-
-                      <!-- /.cv_name -->
                     </div>
-                    <!-- /.chart_value low -->
                     <div class="chart_value cv_alert flex-grow-1">
                       <div class="cv_heighlight" 
                       [ngClass]= "{'text-success':serviceNameInfo['metricScore'] >= deploymentApplicationHealth['maximumCanaryScore'],'text-danger':serviceNameInfo['metricScore'] < deploymentApplicationHealth['minimumCanaryScore'],'text-warning':serviceNameInfo['metricScore'] < deploymentApplicationHealth['minimumCanaryScore'] && serviceNameInfo['metricScore'] >= deploymentApplicationHealth['maximumCanaryScore'],'text-muted': serviceNameInfo['metricScore'] === 'N/A'}">{{ serviceNameInfo['metricScore'] >=0 ? (serviceNameInfo['metricScore'] | number: '1.0-0') : 'N/A'}}</div>
-                      <!-- /.cv_heighlight -->
                       <div class="cv_name">Metrics</div>
-                      <!-- /.cv_name -->
                     </div>
-                    
-                    <!-- /.chart_value alert -->
                     <div class="chart_value cv_alert flex-grow-1">
                       <div class="cv_heighlight"   [ngClass]= "{'text-success':serviceNameInfo['logsScore'] >= deploymentApplicationHealth['maximumCanaryScore'],'text-danger':serviceNameInfo['logsScore'] < deploymentApplicationHealth['minimumCanaryScore'],'text-warning':(serviceNameInfo['logsScore'] < deploymentApplicationHealth['minimumCanaryScore']) && (serviceNameInfo['logsScore'] >= deploymentApplicationHealth['maximumCanaryScore']),'text-muted': serviceNameInfo['logsScore'] === 'N/A'}">{{serviceNameInfo['logsScore'] >= 0 ? (serviceNameInfo['logsScore'] | number: '1.0-0') : 'N/A'}}</div>
-                      <!-- /.cv_heighlight -->
                       <div class="cv_name">Logs</div>
-                      <!-- /.cv_name -->
                     </div>
-                    <!-- /.chart_value alert -->
                   </div>
-                  <!-- /.chart_ratio -->
                   <div *ngIf="deploymentApplicationHealth['analysisType'] === 'Metrics Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'" class="chart_ratio mb-3 text-center d-flex">
                     <div class="chart_value cv_low flex-grow-1">
                       <div class="cv_heighlight">{{serviceNameInfo['metricsCount'] ? serviceNameInfo['metricsCount']['total']:''}}</div>
@@ -297,62 +279,45 @@
                       <div class="cv_name">Metrics</div>
                       <!-- /.cv_name -->
                     </div>
-                    <!-- /.chart_value low -->
-                    <!-- /.chart_value alert -->
                     <div class="chart_value cv_alert flex-grow-1">
                       <div class="cv_heighlight text-danger">{{serviceNameInfo['metricsCount'] ? serviceNameInfo['metricsCount']['fail']:''}} </div>
                       <!-- /.cv_heighlight -->
                       <div class="cv_name">Failed</div>
-                      <!-- /.cv_name -->
                     </div>
                     <div class="chart_value cv_alert flex-grow-1">
                       <div class="cv_heighlight text-warning">{{serviceNameInfo['metricsCount'] ? serviceNameInfo['metricsCount']['critical']:''}}</div>
                       <!-- /.cv_heighlight -->
                       <div class="cv_name">Critical</div>
-                      <!-- /.cv_name -->
                     </div>
                     <div class="chart_value cv_alert flex-grow-1">
                       <div class="cv_heighlight">{{serviceNameInfo['metricsCount'] ? serviceNameInfo['metricsCount']['watchlist']:''}}</div>
                       <!-- /.cv_heighlight -->
                       <div class="cv_name">Watchlist</div>
-                      <!-- /.cv_name -->
                     </div>
-                    <!-- /.chart_value alert -->
                   </div>
-                  <!-- /.chart_ratio -->
-
                   <div *ngIf="deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'" class="chart_ratio text-center d-flex">
                     <div class="chart_value cv_low flex-grow-1">
                       <div class="cv_heighlight">{{serviceNameInfo['clusterCount'] ? serviceNameInfo['clusterCount']['critical']:''}}</div>
                       <!-- /.cv_heighlight -->
                       <div class="cv_name">Critical</div>
-                      <!-- /.cv_name -->
                     </div>
-                    <!-- /.chart_value low -->
                     <div class="chart_value flex-grow-1">
                       <div class="cv_heighlight text-danger">{{serviceNameInfo['clusterCount'] ? serviceNameInfo['clusterCount']['error']:''}}</div>
                       <!-- /.cv_heighlight -->
                       <div class="cv_name">Error</div>
-                      <!-- /.cv_name -->
                     </div>
-                    <!-- /.chart_value alert -->
                     <div class="chart_value cv_alert flex-grow-1">
                       <div class="cv_heighlight text-warning">{{serviceNameInfo['clusterCount'] ? serviceNameInfo['clusterCount']['warning']:''}}</div>
                       <!-- /.cv_heighlight -->
                       <div class="cv_name">Warning</div>
-                      <!-- /.cv_name -->
                     </div>
-                    <!-- /.chart_value alert -->
                     <div class="chart_value cv_alert flex-grow-1">
                       <div class="cv_heighlight">{{serviceNameInfo['clusterCount'] ? serviceNameInfo['clusterCount']['total']:''}}</div>
                       <!-- /.cv_heighlight -->
                       <div class="cv_name">Cluster</div>
-                      <!-- /.cv_name -->
                     </div>
-                    <!-- /.chart_value alert -->
                   </div>
-                  <!-- /.chart_ratio -->
-
+      
                   <div class="table-responsive">
                     <table class="table table-sm table-sm-text text-left table-no-bordered mb-0">
                       <tbody>
@@ -444,59 +409,51 @@
                     </tbody>
                   </table>
                   </div>
-                  <!-- /.table-responsive -->
-                </div>
-                <!-- /.rightBox_body -->
-              </div>
-              <!-- /.rightBox -->
-           
-          </mat-drawer>
-          <mat-drawer-content >
-            <!-- <button (click)="sideNav.toggle()" mat-button>Toggle SideNav</button> -->
-            <!-- <button (click)="onTogglePosition(nav_position)" mat-button>Toggle Position {{ nav_position }}</button> -->
-            <div class="d-flex flex-column">
-              <div class="pull-right">
-                <button class="pull-right" data-toggle="tooltip" data-placement="left" title="Overall canary run inforamtion for the selected application"  mat-button>
-                  <div *ngIf="isShow" (click)="[sideNav.toggle(),getOverallInfo()]"><i  class="fa fa-chevron-right"></i></div>
-                  <div *ngIf="!isShow" (click)="[sideNav.toggle(),getOverallInfo()]"><i  class="fa fa-chevron-left"></i></div>
-                </button>
-               </div>
-              <div class="pt-1">
-                <ul class="nav tab-lined nav-tabs" id="myTab" role="tablist" (click)="onClickTab($event)">
-                  <li class="nav-item" *ngIf="deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'">
-                    <a class="nav-link" [ngClass]="{'active': deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'}"  id="log-analysis-tab" data-toggle="tab" role="tab" aria-controls="log-analysis" aria-selected="true">Log Analysis</a>
-                  </li>
-                  <li *ngIf="deploymentApplicationHealth['analysisType'] === 'Metrics Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'" class="nav-item">
-                    <a class="nav-link" [ngClass]="{'active': deploymentApplicationHealth['analysisType'] === 'Metrics Only'}" id="metric-analysis-tab" data-toggle="tab" role="tab" aria-controls="metric-analysis" aria-selected="true">Metric Analysis</a>
-                  </li>
-                 
-                </ul>
-                
-                <div class="tab-content" id="myTabContent" (click)="onClickAnalysisSection($event)">
-                  <div class="tab-pane p-4 fade " id="log-analysis" role="tabpanel" aria-labelledby="log-analysis-tab"
-                  [ngClass]="{'active': deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics','show': deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'}">
-                      <ng-container *ngIf = "selectedTab === 'log-analysis'">
-                        <app-log-analysis [canaryId]="control.value" [serviceId]="selectedServiceId" ></app-log-analysis>
-                      </ng-container>
-                    </div>
-                    <div class="tab-pane mp-4"  id="metric-analysis" role="tabpanel" aria-labelledby="metric-analysis-tab"
-                    [ngClass]="{'active': deploymentApplicationHealth['analysisType'] === 'Metrics Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics','show': deploymentApplicationHealth['analysisType'] === 'Metrics Only'}">
-                      <ng-container *ngIf = "selectedTab === 'metric-analysis'">
-                        <app-metric-analysis [canaryId]="control.value" [serviceId]="selectedServiceId" ></app-metric-analysis>
-                      </ng-container>
-                    </div>
                 </div>
               </div>
-              <!-- /.tab-lined -->
+            </mat-drawer>
+          
+            <div class="example-sidenav-content">
+              <div class="d-flex flex-column analysisMainDiv">
+                <div class="summaryToggleBtn">
+                  <button data-toggle="tooltip" data-placement="left" title="Overall canary run inforamtion for the selected application"  mat-button>
+                    <div *ngIf="isShow" (click)="[sideNav.toggle(),getOverallInfo()]"><i  class="fa fa-chevron-right"></i></div>
+                    <div *ngIf="!isShow" (click)="[sideNav.toggle(),getOverallInfo()]"><i  class="fa fa-chevron-left"></i></div>
+                  </button>
+                </div>
+                <div class="pt-1">
+                  <ul class="nav tab-lined nav-tabs" id="myTab" role="tablist" (click)="onClickTab($event)">
+                    <li class="nav-item" *ngIf="deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'">
+                      <a class="nav-link" [ngClass]="{'active': deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'}"  id="log-analysis-tab" data-toggle="tab" role="tab" aria-controls="log-analysis" aria-selected="true">Log Analysis</a>
+                    </li>
+                    <li *ngIf="deploymentApplicationHealth['analysisType'] === 'Metrics Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'" class="nav-item">
+                      <a class="nav-link" [ngClass]="{'active': deploymentApplicationHealth['analysisType'] === 'Metrics Only'}" id="metric-analysis-tab" data-toggle="tab" role="tab" aria-controls="metric-analysis" aria-selected="true">Metric Analysis</a>
+                    </li>
+                   
+                  </ul>
+                  
+                  <div class="tab-content" id="myTabContent" (click)="onClickAnalysisSection($event)">
+                    <div class="tab-pane p-4 fade " id="log-analysis" role="tabpanel" aria-labelledby="log-analysis-tab"
+                    [ngClass]="{'active': deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics','show': deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'}">
+                        <ng-container *ngIf = "selectedTab === 'log-analysis'">
+                          <app-log-analysis [canaryId]="control.value" [serviceId]="selectedServiceId" ></app-log-analysis>
+                        </ng-container>
+                      </div>
+                      <div class="tab-pane mp-4"  id="metric-analysis" role="tabpanel" aria-labelledby="metric-analysis-tab"
+                      [ngClass]="{'active': deploymentApplicationHealth['analysisType'] === 'Metrics Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics','show': deploymentApplicationHealth['analysisType'] === 'Metrics Only'}">
+                        <ng-container *ngIf = "selectedTab === 'metric-analysis'">
+                          <app-metric-analysis [canaryId]="control.value" [serviceId]="selectedServiceId" ></app-metric-analysis>
+                        </ng-container>
+                      </div>
+                  </div>
+                </div>
+                <!-- /.tab-lined -->
+              </div>
             </div>
-          </mat-drawer-content>
-        </mat-drawer-container>
-        
-        
-        
-    <!-- /.col-sm-4 -->
-      <!-- /.col-sm-4 -->
-  </div>
+          
+          </mat-drawer-container>
+        </div>
+      </div>
   <!-- /.row -->
     </div>
     <!-- /.page-content -->
