--- a/src/app/application/deployment-verification/deployment-verification.component.less
+++ b/src/app/application/deployment-verification/deployment-verification.component.less
@@ -44,20 +44,20 @@
 }
 .example-container {
   width: 100%;
-  height: 900px;
-  border: 1px solid rgba(0, 0, 0, 0.5);
+  min-height: 95vh;
 }
 
 .example-sidenav-content {
   display: flex;
   height: 100%;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 .example-sidenav {
   padding: 20px;
 }
+
 .mat-drawer-transition .mat-drawer-content {
   transition-duration: 400ms;
   transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -167,4 +167,16 @@ tbody{
 }
 .service-count {
   padding: 20px;
+}
+.analysisMainDiv{
+  width: -webkit-fill-available;
+}
+.summaryToggleBtn{
+  text-align: end;
+  button{
+    outline: none !important;
+  }
+}
+.mat-drawer-inner-container{
+  overflow: hidden !important;
 }
