--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -390,27 +390,41 @@
                             <tr *ngFor="let optionsArr of groupPermissionForm.get('userGroups')['controls'];let i=index">
                               <ng-container [formGroupName]="i">
                                 <td>
-                                  <select class="form-control" formControlName="userGroupId"
-                                  [ngClass]="!groupPermissionForm.get('userGroups')['controls'][i].get('userGroupId').valid && groupPermissionForm.get('userGroups')['controls'][i].get('userGroupId').touched ? 'is-invalid':''">
-                                    <option value="" [disabled]="true">Select</option>
-                                    <option *ngFor = "let user of userGroupDropdownData[i]" value="{{user.userGroupId}}">{{user.userGroupName}}</option>
-                                  </select>
-                                  <span *ngIf="groupPermissionForm.get('userGroups')['controls'][i].get('userGroupId').invalid && groupPermissionForm.get('userGroups')['controls'][i].get('userGroupId').touched"
-                                  class="invalid-feedback">
-                                    <span *ngIf="groupPermissionForm.get('userGroups')['controls'][i].get('userGroupId').errors['required']">Group name is required</span>
-                                    <span *ngIf="groupPermissionForm.get('userGroups')['controls'][i].get('userGroupId').errors['groupNameExist']">Group name already exist</span>
-                                  </span>
+                                  <div class="row">
+                                    <div class="col-12">
+                                      <select class="form-control" formControlName="userGroupId"
+                                      [ngClass]="!groupPermissionForm.get('userGroups')['controls'][i].get('userGroupId').valid && groupPermissionForm.get('userGroups')['controls'][i].get('userGroupId').touched ? 'is-invalid':''">
+                                        <option value="" [disabled]="true">Select</option>
+                                        <option *ngFor = "let user of userGroupDropdownData[i]" value="{{user.userGroupId}}">{{user.userGroupName}}</option>
+                                      </select>
+                                      <span *ngIf="groupPermissionForm.get('userGroups')['controls'][i].get('userGroupId').invalid && groupPermissionForm.get('userGroups')['controls'][i].get('userGroupId').touched"
+                                      class="invalid-feedback">
+                                        <span *ngIf="groupPermissionForm.get('userGroups')['controls'][i].get('userGroupId').errors['required']">Group name is required</span>
+                                        <span *ngIf="groupPermissionForm.get('userGroups')['controls'][i].get('userGroupId').errors['groupNameExist']">Group name already exist</span>
+                                      </span>
+                                    </div>
+                                  </div>
+                                  
                                 </td>
-                                <td>
-                                  <select class="form-control" formControlName="permissionId"
-                                  [ngClass]="!groupPermissionForm.get('userGroups')['controls'][i].get('permissionId').valid && groupPermissionForm.get('userGroups')['controls'][i].get('permissionId').touched ? 'is-invalid':''">
-                                    <option value="" [disabled]="true">Select</option>
-                                    <option value="r">Read Only</option>
-                                    <option value="rx">Read & Execute</option>
-                                    <option value="rwx">Read, Execute & Write</option>
-                                  </select>
-                                  <span *ngIf="!groupPermissionForm.get('userGroups')['controls'][i].get('permissionId').valid && groupPermissionForm.get('userGroups')['controls'][i].get('permissionId').touched"
-                                  class="invalid-feedback">Permission is required</span>
+                                <td style="padding-top: 20px;">
+                                    <div class="custom-control custom-checkbox">
+                                      <div class="row">
+                                        <div class="col-4">
+                                          <input type="checkbox" class="custom-control-input" formControlName="read" id="read{{i}}">
+                                          <label class="custom-control-label" for="read{{i}}">Read</label>
+                                        </div>
+                                        <div class="col-4">
+                                          <input type="checkbox" class="custom-control-input" formControlName="write" id="write{{i}}">
+                                        <label class="custom-control-label" for="write{{i}}">Write</label>
+                                        </div>
+                                        <div class="col-4">
+                                          <input type="checkbox" class="custom-control-input" formControlName="execute" id="execute{{i}}">
+                                       <label class="custom-control-label" for="execute{{i}}">Execute</label>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  <!-- <span *ngIf="!groupPermissionForm.get('userGroups')['controls'][i].get('permissionId').valid && groupPermissionForm.get('userGroups')['controls'][i].get('permissionId').touched"
+                                  class="invalid-feedback">Permission is required</span> -->
                                 </td>
                                 <td>
                                   <a class="text-muted formarray_btn"  data-toggle="tooltip" data-placement="right" title="Delete" 
