--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -406,20 +406,14 @@
                                   </div>
                                   
                                 </td>
-                                <td style="padding-top: 20px;">
+                                <td style="padding-top: 20px;" formArrayName="permissionIds">
                                     <div class="custom-control custom-checkbox">
                                       <div class="row">
-                                        <div class="col-4">
-                                          <input type="checkbox" class="custom-control-input" formControlName="read" id="read{{i}}">
-                                          <label class="custom-control-label" for="read{{i}}">Read</label>
-                                        </div>
-                                        <div class="col-4">
-                                          <input type="checkbox" class="custom-control-input" formControlName="write" id="write{{i}}">
-                                        <label class="custom-control-label" for="write{{i}}">Write</label>
-                                        </div>
-                                        <div class="col-4">
-                                          <input type="checkbox" class="custom-control-input" formControlName="execute" id="execute{{i}}">
-                                       <label class="custom-control-label" for="execute{{i}}">Execute</label>
+                                        <div class="col-4" *ngFor="let permissionIds of optionsArr.get('permissionIds')['controls'];let j=index">
+                                          <ng-container [formGroupName]="j">
+                                            <input type="checkbox" class="custom-control-input" formControlName="value" id="value{{i}}{{j}}">
+                                            <label class="custom-control-label" for="value{{i}}{{j}}">{{permissionIds.get('name').value}}</label>
+                                          </ng-container>
                                         </div>
                                       </div>
                                     </div>
